checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000185771.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#45: 
> mmotm-2009-0105-1250/fs/ubifs/super.c:435: error: 'WB_SYNC_HOLD' undeclared (first use in this function)

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '304d427cd99eb645b44b08d77e70ce308e6bcd8c', maybe rebased or not pulled?
#52: 
commit 304d427cd99eb645b44b08d77e70ce308e6bcd8c

WARNING:TYPO_SPELLING: 'synching' may be misspelled - perhaps 'syncing'?
#64: 
    Fix this by forcing synching all indoes from 'ubifs_sync_fs()'.
                        ^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:BAD_SIGN_OFF: Do not use whitespace before Signed-off-by:
#66: 
    Signed-off-by: Artem Bityutskiy <Artem.Bityutskiy@nokia.com>

The signed-off-by line does not fall in line with the standards
specified by the community.

See: https://www.kernel.org/doc/html/latest/process/submitting-patches.html#developer-s-certificate-of-origin-1-1

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000185771.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 4 warnings, 0 checks, 30 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000185771.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
